xfsprogs-2.8.16 (30 October 2006)
	- Fix up an endian problem for nlink setting in phase 7 for xfs_repair.
	
xfsprogs-2.8.15 (19 October 2006)
	- Fix up nlink checks and repairs in phase 7 for xfs_repair.
	- Remove a bogus LEAFN warning for a single leaf node v2 dir.
	
xfsprogs-2.8.14 (6 October 2006)
	- Fix up the ring command in xfs_db,
	  thanks to Utako Kusaka
	- Set the blocksize on the device to the given sector
	  size which is _not_ necessarily 512 bytes;
	  idea suggested by Shailendra Tripathi.
	- Fix up xfs_copy and its variable argument handling
	  around vfprintf; xfs_copy was seg faulting on x86_64.

xfsprogs-2.8.13 (21 September 2006)
	- Fix v2 directory checking with holes and unreadable blocks.
	- Fix a memory leak in dir2 checking.
	- Update libdisk/md support to work out the stripe width
	  based on (# raid-disks - # parity disks) which
	  doesn't include any spare disks (which we mistakenly did before).
	  Thanks to Shailendra Tripathi's suggestions.
	- Get the kernel int types of __u32 and friends from <asm/types.h>
	  if we can, otherwise define them ourselves.

xfsprogs-2.8.12 (29 August 2006)
	- Multi-thread modifications to xfs_repair.
	- Updated Polish translation, thanks to Jakub Bogusz.
	- Change default mkfs realtime extent size setting to
	  perform better for buffered writes.

xfsprogs-2.8.11 (08 August 2006)
	- xfs_repair prefetch optimisations.
	- Make many tools use direct I/O on Linux if the underlying
	  device supports it.  Mainly for speeding up xfs_repair as
	  libxfs does its own internal metadata buffering now.
	- Fix warnings from mkfs.xfs on ramdisk devices.
	- Fix issues with symbolic link handling in Makefiles.

xfsprogs-2.8.10 (02 August 2006)
	- Fix v2 directory rebuilds in phase6 of xfs_repair.
	- Fix buffer sizing issue for large pagesize systems,
	  affecting mkfs auto-device-type-detection heuristics.

xfsprogs-2.8.9 (18 July 2006)
	- Fix rpm issue with install targets as uid/gid zero (we now