@@ -1,13 +1,18 @@
+xfsprogs-2.8.x
+	- Fix up libxfs initialisation with bad filesystem.
+	  Thanks to Utako Kuzaka <utako@tnes.co.jp> for this.
+
 xfsprogs-2.8.16 (30 October 2006)
 	- Fix up an endian problem for nlink setting in phase 7 for xfs_repair.
 	
 xfsprogs-2.8.15 (19 October 2006)
 	- Fix up nlink checks and repairs in phase 7 for xfs_repair.
 	- Remove a bogus LEAFN warning for a single leaf node v2 dir.
+	  Thanks to Roger Willcocks <roger@filmlight.ltd.uk> for this.
 	
 xfsprogs-2.8.14 (6 October 2006)
 	- Fix up the ring command in xfs_db,
-	  thanks to Utako Kusaka
+	  Thanks to Utako Kuzaka <utako@tnes.co.jp> for this.
 	- Set the blocksize on the device to the given sector
 	  size which is _not_ necessarily 512 bytes;
 	  idea suggested by Shailendra Tripathi.
